// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > children 1`] = `
<div>
  Safe
</div>
`;

exports[`snapshots > custom fallback 1`] = `
<div>
  Custom Error
</div>
`;

exports[`snapshots > error fallback 1`] = `
<div
  class="min-h-screen bg-gray-50 dark:bg-gray-950 flex items-center justify-center p-4"
>
  <div
    class="bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-800 rounded-xl p-8 max-w-md w-full text-center"
  >
    <div
      class="w-16 h-16 mx-auto mb-4 rounded-full bg-red-100 dark:bg-red-900/30 flex items-center justify-center"
    >
      <svg
        class="w-8 h-8 text-red-500 dark:text-red-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4.5c-.77-.833-2.694-.833-3.464 0L3.34 16.5c-.77.833.192 2.5 1.732 2.5z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <h2
      class="text-xl font-bold text-gray-900 dark:text-white mb-2"
    >
      Something went wrong
    </h2>
    <p
      class="text-sm text-gray-500 dark:text-gray-500 mb-6"
    >
      💥
    </p>
    <button
      class="px-6 py-2.5 bg-cyan-500/10 border border-cyan-500/30 text-cyan-600 dark:text-cyan-400 rounded-lg text-sm font-medium hover:bg-cyan-500/20 transition-colors cursor-pointer"
    >
      Reload page
    </button>
  </div>
</div>
`;
